--- a/index.html
+++ b/index.html
@@ -10,7 +10,31 @@
     <link rel="stylesheet" href="index.css">
     <title>Hello, world!</title>
   </head>
+
   <body>
+
+    <header id="header">
+      <img id="header-img" src="images/mason.png" width=130; height=65 alt="Logo Academia" />
+      <div class="general">
+          <ul class="general2">
+              <li>
+                  <a class="inicio" href="index.html">INICIO</a>
+              </li>
+              <li>
+                  <a class="nosotros" href="nosotros.html">NOSOTROS</a>
+              </li>
+              <li>
+                  <a class="proyectos" href="proyectos.html">PROYECTOS</a>
+              </li>
+              <li>
+                  <a class="blog" href="blog.html">BLOG</a>
+              </li>
+              <li>
+                  <a class="contacto" href="contacto.html">CONTACTO</a>
+              </li>
+          </ul>
+      </div>
+  </header>
     <h1>Hello, world!</h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
