--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   </head>
 
   <body>
-
+    <div id="barrauno">
+         <p class="textouno">Hermanos Martinez</p>
+    </div>
     <header id="header">
       <img id="header-img" src="images/mason.png" width=130; height=65 alt="Logo Academia" />
       <div class="general">
@@ -34,7 +36,33 @@
               </li>
           </ul>
       </div>
-  </header>
+   </header>
+   <div id="barrauno">
+    <p class="textouno">Hermanos Martinez</p>
+   </div>
+
+   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="..." class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
+      </div>
+      <div class="carousel-item">
+        <img src="..." class="d-block w-100" alt="...">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
+
     <h1>Hello, world!</h1>
 
     <!-- Optional JavaScript; choose one of the two! -->
