--- a/index.html
+++ b/index.html
@@ -42,7 +42,27 @@
     <p class="textouno">Hermanos Martinez</p>
    </div>
 
-   
+   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="Fotos_Portafolio/IMG-20210618-WA0005.jpg" class="d-block w-100" alt="..." height="400">
+      </div>
+      <div class="carousel-item">
+        <img src="Fotos_Portafolio/IMG-20210618-WA0008.jpg" class="d-block w-100" alt="..." height="400">
+      </div>
+      <div class="carousel-item">
+        <img src="Fotos_Portafolio/IMG-20210618-WA0009.jpg" class="d-block w-100" alt="..." height="400">
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>   
 
     <h1>Hello, world!</h1>
 
