--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     <p class="textouno">Hermanos Martinez</p>
    </div>
 
-   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="Fotos_Portafolio/IMG-20210618-WA0012.jpg" class="d-block w-100" alt="..." height="400">
       </div>
       <div class="carousel-item">
-        <img src="Fotos_Portafolio/IMG-20210618-WA0015.jpg" class="d-block w-100" alt="..." height="400">
+        <img src="Fotos_Portafolio/IMG-20210618-WA0015.jpg"  class="d-block w-100" alt="..." height="400">
       </div>
       <div class="carousel-item">
         <img src="Fotos_Portafolio/IMG-20210618-WA0014.jpg" class="d-block w-100" alt="..." height="400">
