--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
       </div>
    </header>
    
-
+  <div id= "fondoOpaco">
    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="Fotos_Portafolio/IMG-20210618-WA0012.jpg" class="d-block w-100" alt="..." height="450">
+        <img src="Fotos_Portafolio/IMG-20210618-WA0012.jpg" class="d-block w-100" alt="..." height="500">
       </div>
      <div class="carousel-item">
-        <img src="Fotos_Portafolio/IMG-20210618-WA0015.jpg"  class="d-block w-100" alt="..." height="450">
+        <img src="Fotos_Portafolio/IMG-20210618-WA0015.jpg"  class="d-block w-100" alt="..." height="500">
       </div>
       <div class="carousel-item">
-        <img src="Fotos_Portafolio/IMG-20210618-WA0014.jpg" class="d-block w-100" alt="..." height="450">
+        <img src="Fotos_Portafolio/IMG-20210618-WA0014.jpg" class="d-block w-100" alt="..." height="500">
       </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -58,7 +58,8 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
-  </div>   
+  </div> 
+</div>  
 
     <h1>Hello, world!</h1>
 
