--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
 
     <header id="header">
-      <img id="header-img" src="images/mason.png" width=130; height=65 alt="Logo Academia" />
+      <img id="header-img" src="Fondos/Logotipo.png" width=190; height=105 alt="Logo Ebanisteria" />
       <div class="general">
           <ul class="general2">
               <li>
