div portafolio - background

--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
   </div> 
 </div>  
 
+<div id="portafolio">
     <h1>Hello, world!</h1>
-
+</div>
     
 
     <!-- Optional JavaScript; choose one of the two! -->
