--- a/index.html
+++ b/index.html
@@ -69,32 +69,33 @@
   <div class="card">
     <img src="Fondos/fondo-madera-interior.jpg" class="card-img-top" alt="servicio" height="300">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <h5 class="card-title">Productos</h5>
+      <p class="card-text">Puertas, ventanas, cocinas, baños, suelos, salones, dormitorios, exteriores.</p>
+      <p class="card-text"><small class="text-muted"></small></p>
     </div>
   </div>
   <div class="card">
     <img src="Fondos/fondo-madera-vigas.jpg" class="card-img-top" alt="servicio" height="300" >
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <h5 class="card-title">Personalizamos</h5>
+      <p class="card-text">Fabricamos todo tipo de mueble por encargo y a medida. 
+                          Personalizamos desde el principio hasta el fin de tus ideas.</p>
+      <p class="card-text"><small class="text-muted"></small></p>
     </div>
   </div>
   <div class="card">
     <img src="Fondos/fondo-madera-casa.jpg" class="card-img-top" alt="servicio" height="300">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <h5 class="card-title">Restauramos</h5>
+      <p class="card-text">Damos vida a tus muebles, exteriores y a todo tu hogar.</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
   <div class="card">
     <img src="Fondos/fondo-madera-taller.jpg" class="card-img-top" alt="servicio" height="300">
     <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+      <h5 class="card-title">Calidad</h5>
+      <p class="card-text">Personal altamente cualificado. Empleamos materiales de primera.</p>
       <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
     </div>
   </div>
