--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="Fotos_Portafolio/IMG-20210618-WA0012.jpg" class="d-block w-100" alt="..." height="500">
+        <img src="Fotos_Portafolio/WA0017.jpg" class="d-block w-100" alt="..." height="500">
       </div>
      <div class="carousel-item">
         <img src="Fotos_Portafolio/IMG-20210618-WA0015.jpg"  class="d-block w-100" alt="..." height="500">
@@ -107,26 +107,26 @@
 
   <div class="card-group">
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="Fotos_Portafolio/WA0013.jpg" class="card-img-top" alt="..." height="300">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-title">Linea Hogar</h5>
+        <p class="card-text"></p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
     </div>
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="Fotos_Portafolio/0007.png" class="card-img-top" alt="..." height="300">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-title">Linea Exteriores</h5>
+        <p class="card-text"></p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
     </div>
     <div class="card">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="Fotos_Portafolio/WA0011.jpg" class="card-img-top" alt="..." height="300">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        <h5 class="card-title">Linea Verde</h5>
+        <p class="card-text"></p>
         <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
       </div>
     </div>
