--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -17,6 +17,7 @@
     <header id="header">
       <img id="header-img" src="Fondos/Logotipo.png" width=190; height=150 alt="Logo Ebanisteria" />
       <div class="general">
+        <nav>
           <ul class="general2">
               <li>
                   <a class="inicio" href="index.html">INICIO</a>
@@ -34,6 +35,7 @@
                   <a class="contacto" href="contacto.html">CONTACTO</a>
               </li>
           </ul>
+        </nav>
       </div>
    </header>
    
@@ -88,7 +90,7 @@
     <div class="card-body">
       <h5 class="card-title">Restauramos</h5>
       <p class="card-text">Damos vida a tus muebles, exteriores y a todo tu hogar.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text"><small class="text-muted"></small></p>
     </div>
   </div>
   <div class="card">
@@ -96,7 +98,7 @@
     <div class="card-body">
       <h5 class="card-title">Calidad</h5>
       <p class="card-text">Personal altamente cualificado. Empleamos materiales de primera.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      <p class="card-text"><small class="text-muted"></small></p>
     </div>
   </div>
 </div>
@@ -111,7 +113,7 @@
       <div class="card-body">
         <h5 class="card-title">Linea Hogar</h5>
         <p class="card-text"></p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <p class="card-text"><small class="text-muted"></small></p>
       </div>
     </div>
     <div class="card">
@@ -119,7 +121,7 @@
       <div class="card-body">
         <h5 class="card-title">Linea Exteriores</h5>
         <p class="card-text"></p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <p class="card-text"><small class="text-muted"></small></p>
       </div>
     </div>
     <div class="card">
@@ -127,7 +129,7 @@
       <div class="card-body">
         <h5 class="card-title">Linea Verde</h5>
         <p class="card-text"></p>
-        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        <p class="card-text"><small class="text-muted"></small></p>
       </div>
     </div>
   </div>
