--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
    </header>
    
-  <div id= "fondoOpaco">
+  <!--<div id= "fondoOpaco"></div>-->
    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -51,7 +51,7 @@
       <div class="carousel-item">
         <img src="Fotos_Portafolio/IMG-20210618-WA0014.jpg" class="d-block w-100" alt="..." height="500">
       </div>
-    </div>
+    
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
