--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="Fotos_Portafolio/WA0017.jpg" class="d-block w-100" alt="mesas_bar" height="500">
+        <img src="Fotos_Portafolio/WA0017.jpg" class="d-block w-100" alt="mesas_bar"> <!--height="500"-->
       </div>
      <div class="carousel-item">
-        <img src="Fotos_Portafolio/IMG-20210618-WA0015.jpg"  class="d-block w-100" alt="sala_finca" height="500">
+        <img src="Fotos_Portafolio/IMG-20210618-WA0015.jpg"  class="d-block w-100" alt="sala_finca"> <!--height="500"-->
       </div>
       <div class="carousel-item">
-        <img src="Fotos_Portafolio/IMG-20210618-WA0014.jpg" class="d-block w-100" alt="comedor_casa" height="500">
+        <img src="Fotos_Portafolio/IMG-20210618-WA0014.jpg" class="d-block w-100" alt="comedor_casa"> <!--height="500"-->
       </div>
     
     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
