--- a/index.html
+++ b/index.html
@@ -1,110 +1,115 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    
-    <link rel="stylesheet" media="screen" href="index.css">
-    <title>Hello, world!</title>
-  </head>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <body>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <header id="header">
-      <img id="header-img" src="Fondos/Logotipo.png" width=190; height=150 alt="Logo Ebanisteria" />
-      <div class="general">
-        <nav>
-          <ul class="general2">
-              <li>
-                  <a class="inicio" href="index.html">INICIO</a>
-              </li>
-              <li>
-                  <a class="nosotros" href="nosotros.html">NOSOTROS</a>
-              </li>
-              <li>
-                  <a class="proyectos" href="proyectos.html">PROYECTOS</a>
-              </li>
-              <li>
-                  <a class="blog" href="blog.html">BLOG</a>
-              </li>
-              <li>
-                  <a class="contacto" href="contacto.html">CONTACTO</a>
-              </li>
-          </ul>
-        </nav>
+  <link rel="stylesheet" media="screen" href="index.css">
+  <title>Hello, world!</title>
+</head>
+
+<body>
+
+  <header id="header">
+    <img id="header-img" src="Fondos/Logotipo.png" width=190; height=150 alt="Logo Ebanisteria" />
+    <div class="general">
+      <nav>
+        <ul class="general2">
+          <li>
+            <a class="inicio" href="index.html">INICIO</a>
+          </li>
+          <li>
+            <a class="nosotros" href="nosotros.html">NOSOTROS</a>
+          </li>
+          <li>
+            <a class="proyectos" href="proyectos.html">PROYECTOS</a>
+          </li>
+          <li>
+            <a class="blog" href="blog.html">BLOG</a>
+          </li>
+          <li>
+            <a class="contacto" href="contacto.html">CONTACTO</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <div id="fondoOpaco">
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img src="Fotos_Portafolio/WA0017.jpg" class="d-block w-100" alt="..." height="500">
+        </div>
+        <div class="carousel-item">
+          <img src="Fotos_Portafolio/IMG-20210618-WA0015.jpg" class="d-block w-100" alt="..." height="500">
+        </div>
+        <div class="carousel-item">
+          <img src="Fotos_Portafolio/IMG-20210618-WA0014.jpg" class="d-block w-100" alt="..." height="500">
+        </div>
       </div>
-   </header>
+
+
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+     </div>
+    </div>
    
-  <div id= "fondoOpaco">
-   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="Fotos_Portafolio/WA0017.jpg" class="d-block w-100" alt="..." height="500">
-      </div>
-      <div class="carousel-item">
-        <img src="Fotos_Portafolio/IMG-20210618-WA0015.jpg"  class="d-block w-100" alt="..." height="500">
-      </div>
-      <div class="carousel-item">
-        <img src="Fotos_Portafolio/IMG-20210618-WA0014.jpg" class="d-block w-100" alt="..." height="500">
-      </div>
-    </div>
-   </div>
   
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
-  </div> 
-</div>  
-</div>
-<div id="portafolio">
+  <div id="portafolio">
     <img id="portafolio-img" src="Fondos/Logotipo.png" width=290; height=250 alt="Logo Ebanisteria" />
-</div>
+  </div>
 
-<div class="card-group">
-  <div class="card">
-    <img src="Fondos/fondo-madera-interior.jpg" class="card-img-top" alt="servicio" height="300">
-    <div class="card-body">
-      <h5 class="card-title">Productos</h5>
-      <p class="card-text">Puertas, ventanas, cocinas, baños, suelos, salones, dormitorios, exteriores.</p>
-      <p class="card-text"><small class="text-muted"></small></p>
+  <div class="card-group">
+    <div class="card">
+      <img src="Fondos/fondo-madera-interior.jpg" class="card-img-top" alt="servicio" height="300">
+      <div class="card-body">
+        <h5 class="card-title">Productos</h5>
+        <p class="card-text">Puertas, ventanas, cocinas, baños, suelos, salones, dormitorios, exteriores.</p>
+        <p class="card-text"><small class="text-muted"></small></p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="Fondos/fondo-madera-vigas.jpg" class="card-img-top" alt="servicio" height="300">
+      <div class="card-body">
+        <h5 class="card-title">Personalizamos</h5>
+        <p class="card-text">Fabricamos todo tipo de mueble por encargo y a medida.
+          Personalizamos desde el principio hasta el fin de tus ideas.</p>
+        <p class="card-text"><small class="text-muted"></small></p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="Fondos/fondo-madera-casa.jpg" class="card-img-top" alt="servicio" height="300">
+      <div class="card-body">
+        <h5 class="card-title">Restauramos</h5>
+        <p class="card-text">Damos vida a tus muebles, exteriores y a todo tu hogar.</p>
+        <p class="card-text"><small class="text-muted"></small></p>
+      </div>
+    </div>
+    <div class="card">
+      <img src="Fondos/fondo-madera-taller.jpg" class="card-img-top" alt="servicio" height="300">
+      <div class="card-body">
+        <h5 class="card-title">Calidad</h5>
+        <p class="card-text">Personal altamente cualificado. Empleamos materiales de primera.</p>
+        <p class="card-text"><small class="text-muted"></small></p>
+      </div>
     </div>
   </div>
-  <div class="card">
-    <img src="Fondos/fondo-madera-vigas.jpg" class="card-img-top" alt="servicio" height="300" >
-    <div class="card-body">
-      <h5 class="card-title">Personalizamos</h5>
-      <p class="card-text">Fabricamos todo tipo de mueble por encargo y a medida. 
-                          Personalizamos desde el principio hasta el fin de tus ideas.</p>
-      <p class="card-text"><small class="text-muted"></small></p>
-    </div>
-  </div>
-  <div class="card">
-    <img src="Fondos/fondo-madera-casa.jpg" class="card-img-top" alt="servicio" height="300">
-    <div class="card-body">
-      <h5 class="card-title">Restauramos</h5>
-      <p class="card-text">Damos vida a tus muebles, exteriores y a todo tu hogar.</p>
-      <p class="card-text"><small class="text-muted"></small></p>
-    </div>
-  </div>
-  <div class="card">
-    <img src="Fondos/fondo-madera-taller.jpg" class="card-img-top" alt="servicio" height="300">
-    <div class="card-body">
-      <h5 class="card-title">Calidad</h5>
-      <p class="card-text">Personal altamente cualificado. Empleamos materiales de primera.</p>
-      <p class="card-text"><small class="text-muted"></small></p>
-    </div>
-  </div>
-</div>
-  <hr>  
+  <hr>
   <div id="galeria">
     <img id="galeria-img" src="Fondos/titulo_galeria.png" width=190; height=90 alt="Logo Ebanisteria" />
   </div>
@@ -138,15 +143,18 @@
 
 
 
-    <!-- Optional JavaScript; choose one of the two! -->
+  <!-- Optional JavaScript; choose one of the two! -->
 
-    <!-- Option 1: Bootstrap Bundle with Popper --> 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-     
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
+  <!-- Option 1: Bootstrap Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+
+  <!-- Option 2: Separate Popper and Bootstrap JS -->
+  <!--
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     -->
-  </body>
+</body>
+
 </html>
