--- a/index.html
+++ b/index.html
@@ -16,7 +16,20 @@
 
 <body>
 
-  <header id="header">
+  <nav class="navbar navbar-light bg-light">
+    <div class="container">
+     <!-- <a class="navbar-brand" href="#">-->
+        <img id="logoInicio" src="Fondos/Logotipo.png" alt="" width="110" height="110">
+     <!-- </a>-->
+    </div>
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Navbar</a>
+    </div>
+  </nav>
+  <!--<header id="header">
     <img id="header-img" src="Fondos/Logotipo.png" width=190; height=150 alt="Logo Ebanisteria" />
     <div class="general">
       <nav>
@@ -39,19 +52,19 @@
         </ul>
       </nav>
     </div>
-  </header>
+  </header>-->
 
-  <div id="fondoOpaco">
+  <!--<div id="fondoOpaco"></div>-->
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="Fotos_Portafolio/WA0017.jpg" class="d-block w-100" alt="..." height="500">
+          <img src="Fotos_Portafolio/WA0017.jpg" class="d-block w-100" alt="..." height="300">
         </div>
         <div class="carousel-item">
-          <img src="Fotos_Portafolio/IMG-20210618-WA0015.jpg" class="d-block w-100" alt="..." height="500">
+          <img src="Fotos_Portafolio/IMG-20210618-WA0015.jpg" class="d-block w-100" alt="..."height="300">
         </div>
         <div class="carousel-item">
-          <img src="Fotos_Portafolio/IMG-20210618-WA0014.jpg" class="d-block w-100" alt="..." height="500">
+          <img src="Fotos_Portafolio/IMG-20210618-WA0014.jpg" class="d-block w-100" alt="..."height="300">
         </div>
       </div>
 
@@ -67,7 +80,7 @@
         <span class="visually-hidden">Next</span>
       </button>
      </div>
-    </div>
+    
    
   
   <div id="portafolio">
