consulta de medios y footer

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
      <!-- </a>-->
     </div>
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <a class="navbar-brand" href="#">Navbar</a>
-      <a class="navbar-brand" href="#">Navbar</a>
-      <a class="navbar-brand" href="#">Navbar</a>
+      <a class="navbar-brand" href="#">Portafolio</a>
+      <a class="navbar-brand" href="#">Galería</a>
+      <a class="navbar-brand" href="#">Nosotros</a>
+      <a class="navbar-brand" href="#">Contacto</a>
     </div>
   </nav>
   <!--<header id="header">
@@ -154,7 +154,21 @@
     </div>
   </div>
 
+  <footer class="bg-dark text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+      <!-- Section: Social media -->
 
+    </div>
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      Hermanos Martinez<br>
+      Carpintería/Ebanistería<br>
+      Elaborado con tecnología:
+      <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a><br>
+      Diseño Web: <br> <a class="text-white" href="https://co.linkedin.com/in/sebastian-vargas-294a04126">Sebastián Vargas</a><br>
+      © 2021 Copyright. 
+    </div>
+  </footer>
 
   <!-- Optional JavaScript; choose one of the two! -->
 
