navbar y consulta de medios

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
      <!-- </a>-->
     </div>
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Portafolio</a>
-      <a class="navbar-brand" href="#">Galería</a>
-      <a class="navbar-brand" href="#">Nosotros</a>
-      <a class="navbar-brand" href="#">Contacto</a>
+      <a class="navbar-brand" href="#"><p>Portafolio</p></a>
+      <a class="navbar-brand" href="#"><p>Galería</p></a>
+      <a class="navbar-brand" href="#"><p>Nosotros</p></a>
+      <a class="navbar-brand" href="#"><p>Contacto</p></a>
     </div>
   </nav>
   <!--<header id="header">
