test de vectores redes para footer

--- a/index.html
+++ b/index.html
@@ -158,8 +158,9 @@
     <!-- Grid container -->
     <div class="container p-4 pb-0">
       <!-- Section: Social media -->
-
-    </div>
+      <img id="logoredes" src="Fondos/facebook_official_logo_icon.png" alt="..." width="50" height="50">
+      <img id="logoredes" src="Fondos/.png" alt="..." width="50" height="50">
+    </div><br>
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       Hermanos Martinez<br>
       Carpintería/Ebanistería<br>
