iconos redes footer

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
+  <!--<meta http-equiv="X-UA-Compatible" content="ie=edge">-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Bootstrap CSS -->
@@ -158,9 +159,11 @@
     <!-- Grid container -->
     <div class="container p-4 pb-0">
       <!-- Section: Social media -->
-      <img id="logoredes" src="Fondos/facebook_official_logo_icon.png" alt="..." width="50" height="50">
-      <img id="logoredes" src="Fondos/.png" alt="..." width="50" height="50">
-    </div><br>
+      <img id="logoredes" src="Fondos/facebook_official_logo_icon.png" alt="..." width="40" height="40">
+      <img id="logoredes" src="Fondos/twitter_101809.png" alt="..." width="45" height="45">
+      <img id="logoredes" src="Fondos/instagram_logo.png" alt="..." width="40" height="40">
+    </div>
+    <br>
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       Hermanos Martinez<br>
       Carpintería/Ebanistería<br>
