aplicacion de  alt nombres de redes

--- a/index.html
+++ b/index.html
@@ -159,9 +159,9 @@
     <!-- Grid container -->
     <div class="container p-4 pb-0">
       <!-- Section: Social media -->
-      <img id="logoredes" src="Fondos/facebook_official_logo_icon.png" alt="..." width="40" height="40">
-      <img id="logoredes" src="Fondos/twitter_101809.png" alt="..." width="45" height="45">
-      <img id="logoredes" src="Fondos/instagram_logo.png" alt="..." width="40" height="40">
+      <img id="logoredes" src="Fondos/facebook_official_logo_icon.png" alt="facebook" width="40" height="40">
+      <img id="logoredes" src="Fondos/twitter_101809.png" alt="twitter" width="45" height="45">
+      <img id="logoredes" src="Fondos/instagram_logo.png" alt="instagram" width="40" height="40">
     </div>
     <br>
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
