consulta de medios

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
      <!-- </a>-->
     </div>
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><p>Portafolio</p></a>
-      <a class="navbar-brand" href="#"><p>Galería</p></a>
-      <a class="navbar-brand" href="#"><p>Nosotros</p></a>
-      <a class="navbar-brand" href="#"><p>Contacto</p></a>
+      <a class="navbar-brand" href="#"><p class="cabezote">Portafolio</p></a>
+      <a class="navbar-brand" href="#"><p class="cabezote">Galería</p></a>
+      <a class="navbar-brand" href="#"><p class="cabezote">Nosotros</p></a>
+      <a class="navbar-brand" href="#"><p class="cabezote">Contacto</p></a>
     </div>
   </nav>
   <!--<header id="header">
@@ -164,9 +164,14 @@
       <img id="logoredes" src="Fondos/instagram_logo.png" alt="instagram" width="40" height="40">
     </div>
     <br>
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);"> 
+      
+    <br>
       Hermanos Martinez<br>
       Carpintería/Ebanistería<br>
+      Teléfono/Whatsapp: +57 300 6560820<br>
+      e-mail: rmar6721@hotmail.com<br>
       Elaborado con tecnología:
       <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a><br>
       Diseño Web: <br> <a class="text-white" href="https://co.linkedin.com/in/sebastian-vargas-294a04126">Sebastián Vargas</a><br>
