--- a/index.html
+++ b/index.html
@@ -167,15 +167,17 @@
 
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);"> 
       
-    <br>
       Hermanos Martinez<br>
       Carpintería/Ebanistería<br>
-      Teléfono/Whatsapp: +57 300 6560820<br>
-      e-mail: rmar6721@hotmail.com<br>
+      📱 Teléfono/Whatsapp: +57 300 6560820<br>
+      ✉️ e-mail: rmar6721@hotmail.com<br>
+      © 2021 Copyright.
+  
+    </div>
+    <div>
       Elaborado con tecnología:
-      <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a><br>
-      Diseño Web: <br> <a class="text-white" href="https://co.linkedin.com/in/sebastian-vargas-294a04126">Sebastián Vargas</a><br>
-      © 2021 Copyright. 
+      <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a> -
+      Diseño Web: <a class="text-white" href="https://co.linkedin.com/in/sebastian-vargas-294a04126">Sebastián Vargas</a><br>
     </div>
   </footer>
 
