--- a/portafolio.html
+++ b/portafolio.html
@@ -2,32 +2,59 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <!--<meta http-equiv="X-UA-Compatible" content="ie=edge">-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <!--<meta http-equiv="X-UA-Compatible" content="ie=edge">-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-  <link rel="stylesheet" media="screen" href="portafolio.css">
-  <title>Hermanos Martinez</title>
+    <link rel="stylesheet" media="screen" href="portafolio.css">
+    <title>Hermanos Martinez</title>
 </head>
 
 <body>
     <nav class="navbar navbar-light bg-light">
         <div class="container">
-         <!-- <a class="navbar-brand" href="#">-->
+            <!-- <a class="navbar-brand" href="#">-->
             <img id="logoInicio" src="Fondos/Logotipo.png" alt="" width="110" height="110">
-         <!-- </a>-->
+            <!-- </a>-->
         </div>
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"><p class="cabezote">Portafolio</p></a>
-          <a class="navbar-brand" href="#"><p class="cabezote">Galería</p></a>
-          <a class="navbar-brand" href="#"><p class="cabezote">Nosotros</p></a>
-          <a class="navbar-brand" href="#"><p class="cabezote">Contacto</p></a>
+            <a class="navbar-brand" href="#">
+                <p class="cabezote">Portafolio</p>
+            </a>
+            <a class="navbar-brand" href="#">
+                <p class="cabezote">Galería</p>
+            </a>
+            <a class="navbar-brand" href="#">
+                <p class="cabezote">Nosotros</p>
+            </a>
+            <a class="navbar-brand" href="#">
+                <p class="cabezote">Contacto</p>
+            </a>
         </div>
-      </nav>
+    </nav>
+
+    <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="..." class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
+
+
 </html>
