Se insertó foto para portafolio

--- a/portafolio.html
+++ b/portafolio.html
@@ -45,15 +45,29 @@
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.</p>
-                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                    <h5 class="card-title">Productos</h5>
+                    <p class="card-text">Creamos entornos y piezas en madera para viviendas, oficinas, casas-fincas, locales comerciales. 
+                        En nuestros servicios se refleja la innovación en diseños, acabados y técnicas de tratamiento de la madera.
+                        Nos destacamos por elaborar productos a la medida: <b>Armarios, dormitorios, muebles interior/exterior, vestidores, comedores, 
+                        cocinas, puertas, zapateros, librerías,camas, mesas, jardineras, sillones.</b></p>
                 </div>
             </div>
         </div>
     </div>
 
+    <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="Fotos_Portafolio/IMG-PDTO-0016.jpg" class="img-fluid rounded-start" alt="...">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title">Personalizamos</h5>
+                    <p class="card-text">C.</b></p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 
