Se ajustó la card text dos

--- a/portafolio.html
+++ b/portafolio.html
@@ -41,13 +41,13 @@
     <div class="card mb-3" style="max-width: 540px;">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="Fotos_Portafolio/IMG-PDTO-0017.jpg" class="img-fluid rounded-start" alt="...">
+                <img src="Fotos_Portafolio/IMG-PDTO-0017.jpg" class="img-fluid rounded-start" alt="Productos">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
                     <h5 class="card-title">Productos</h5>
                     <p class="card-text">Creamos entornos y piezas en madera para viviendas, oficinas, casas-fincas, locales comerciales. 
-                        En nuestros servicios se refleja la innovación en diseños, acabados y técnicas de tratamiento de la madera.
+                        En nuestros servicios se refleja la innovación en diseños y acabados.
                         Nos destacamos por elaborar productos a la medida: <b>Armarios, dormitorios, muebles interior/exterior, vestidores, comedores, 
                         cocinas, puertas, zapateros, librerías,camas, mesas, jardineras, sillones.</b></p>
                 </div>
@@ -63,7 +63,9 @@
             <div class="col-md-8">
                 <div class="card-body">
                     <h5 class="card-title">Personalizamos</h5>
-                    <p class="card-text">C.</b></p>
+                    <p class="card-text">Ofrecemos atención personalizada, hacemos realidad los sueños e ideas.
+                        Facilitamos productos únicos a clientes únicos. <b>Garantizamos asesoramiento dedicado 
+                        y soluciones individualizads de alta calidad.</b></p>
                 </div>
             </div>
         </div>
