Se agregó imagen y texto en card text

--- a/portafolio.html
+++ b/portafolio.html
@@ -48,8 +48,8 @@
                     <h5 class="card-title">Productos</h5>
                     <p class="card-text">Creamos entornos y piezas en madera para viviendas, oficinas, casas-fincas, locales comerciales. 
                         En nuestros servicios se refleja la innovación en diseños y acabados.
-                        Nos destacamos por elaborar productos a la medida: <b>Armarios, dormitorios, muebles interior/exterior, vestidores, comedores, 
-                        cocinas, puertas, zapateros, librerías,camas, mesas, jardineras, sillones.</b></p>
+                        Nos destacamos por elaborar productos a la medida: <b>Armarios, dormitorios, vestidores, comedores, 
+                        cocinas, puertas, zapateros, librerías, salones, camas, mesas, jardineras, baños, sillones.</b></p>
                 </div>
             </div>
         </div>
@@ -58,7 +58,7 @@
     <div class="card mb-3" style="max-width: 540px;">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="Fotos_Portafolio/IMG-PDTO-0016.jpg" class="img-fluid rounded-start" alt="...">
+                <img src="Fotos_Portafolio/IMG-PDTO-0016.jpg" class="img-fluid rounded-start" alt="Personalizamos">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
@@ -70,6 +70,24 @@
             </div>
         </div>
     </div>
+
+    <div class="card mb-3" style="max-width: 540px;">
+        <div class="row g-0">
+            <div class="col-md-4">
+                <img src="Fotos_Portafolio/IMG-PDTO-0010.jpg" class="img-fluid rounded-start" alt="Restauramos">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title">Restauramos</h5>
+                    <p class="card-text">Conjugando el mimo y la delicadeza que requiere un trabajo tan minucioso
+                        como la restauración, mediante técnicas de tratamiento de la madera, le damos un nuevo aire
+                        de frescura a los muebles de su hogar dañados por el tiempo.<b> El valor de los mismos
+                        quedará intacto y brillarán como el primer dia.</b></p>     
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 
