Se cambio titulo

--- a/portafolio.html
+++ b/portafolio.html
@@ -95,7 +95,7 @@
             </div>
             <div class="col-md-8">
                 <div class="card-body">
-                    <h5 class="card-title">Restauramos</h5>
+                    <h5 class="card-title">Calidad</h5>
                     <p class="card-text">Conjugando el mimo y la delicadeza que requiere un trabajo tan minucioso
                         como la restauración, mediante técnicas de tratamiento de la madera, le damos un nuevo aire
                         de frescura a los muebles de su hogar dañados por el tiempo.<b> El valor de los mismos
