Se agregó imagen en calidad cardtext

--- a/portafolio.html
+++ b/portafolio.html
@@ -91,15 +91,12 @@
     <div class="card mb-3" style="max-width: 540px;">
         <div class="row g-0">
             <div class="col-md-4">
-                <img src="Fotos_Portafolio/IMG-PDTO-0010.jpg" class="img-fluid rounded-start" alt="Restauramos">
+                <img src="Fotos_Portafolio/IMG-PDTO-0043.jpg" class="img-fluid rounded-start" alt="Calidad">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
                     <h5 class="card-title">Calidad</h5>
-                    <p class="card-text">Conjugando el mimo y la delicadeza que requiere un trabajo tan minucioso
-                        como la restauración, mediante técnicas de tratamiento de la madera, le damos un nuevo aire
-                        de frescura a los muebles de su hogar dañados por el tiempo.<b> El valor de los mismos
-                        quedará intacto y brillarán como el primer dia.</b></p>     
+                    <p class="card-text">.</b></p>     
                 </div>
             </div>
         </div>
