Se copio funciones bootstrap

--- a/portafolio.html
+++ b/portafolio.html
@@ -46,10 +46,13 @@
             <div class="col-md-8">
                 <div class="card-body">
                     <h5 class="card-title">Productos</h5>
-                    <p class="card-text">Creamos entornos y piezas en madera para viviendas, oficinas, casas-fincas, locales comerciales. 
+                    <p class="card-text">Creamos entornos y piezas en madera para viviendas, oficinas, casas-fincas,
+                        locales comerciales.
                         En nuestros servicios se refleja la innovación en diseños y acabados.
-                        Nos destacamos por elaborar productos a la medida: <b>Armarios, dormitorios, vestidores, comedores, 
-                        cocinas, puertas, zapateros, librerías, salones, camas, mesas, jardineras, baños, sillones.</b></p>
+                        Nos destacamos por elaborar productos a la medida: <b>Armarios, dormitorios, vestidores,
+                            comedores,
+                            cocinas, puertas, zapateros, librerías, salones, camas, mesas, jardineras, baños,
+                            sillones.</b></p>
                 </div>
             </div>
         </div>
@@ -64,8 +67,8 @@
                 <div class="card-body">
                     <h5 class="card-title">Personalizamos</h5>
                     <p class="card-text">Ofrecemos atención personalizada, hacemos realidad los sueños e ideas.
-                        Facilitamos productos únicos a clientes únicos. <b>Garantizamos asesoramiento dedicado 
-                        y soluciones individualizads de alta calidad.</b></p>
+                        Facilitamos productos únicos a clientes únicos. <b>Garantizamos asesoramiento dedicado
+                            y soluciones individualizads de alta calidad.</b></p>
                 </div>
             </div>
         </div>
@@ -82,7 +85,7 @@
                     <p class="card-text">Conjugando el mimo y la delicadeza que requiere un trabajo tan minucioso
                         como la restauración, mediante técnicas de tratamiento de la madera, le damos un nuevo aire
                         de frescura a los muebles de su hogar dañados por el tiempo.<b> El valor de los mismos
-                        quedará intacto y brillarán como el primer dia.</b></p>     
+                            quedará intacto y brillarán como el primer dia.</b></p>
                 </div>
             </div>
         </div>
@@ -98,11 +101,27 @@
                     <h5 class="card-title">Calidad</h5>
                     <p class="card-text">Nuestro proceso de trabajo combina la exquisitez y la oportunidad.
                         Escuchamos las necesidades, enseñamos diseños y materiales a utlizar, elaboramos el presupuesto.
-                    <b>Ofrecemos máxima garantía.</b></p>        
+                        <b>Ofrecemos máxima garantía.</b>
+                    </p>
                 </div>
             </div>
         </div>
     </div>
+
+
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+  -->
+
 
 </body>
 
