Se cambio color fuente a gold en nav y tamaño imagen

--- a/portafolio.html
+++ b/portafolio.html
@@ -24,7 +24,7 @@
         </div>
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <p class="cabezote">Portafolio</p>
+                <p class="cabezoteUno">Portafolio</p>
             </a>
             <a class="navbar-brand" href="#">
                 <p class="cabezote">Galería</p>
