Se inserto funcion botones

--- a/galeria.html
+++ b/galeria.html
@@ -38,68 +38,76 @@
         </div>
     </nav>
 
+    <div class="text-center p-3" style="background-color: rgba(253, 253, 253, 0.6);">
+        <h3>LÍNEA HOGAR</h3>
+    </div>
+
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
-          <div class="card">
-            <img src="Fotos_Portafolio/IMG-hogar-WA0003.jpg" class="card-img-top" alt="..." height="300">
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="Fotos_Portafolio/IMG-hogar-WA0004.jpg" class="card-img-top" alt="..." height="300">
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="Fotos_Portafolio/IMG-hogar-WA0007.jpg" class="card-img-top" alt="..." height="300">
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="Fotos_Portafolio/IMG-hogar-WA0016.jpg" class="card-img-top" alt="..." height="300">
-          </div>
+            <div class="card">
+                <img src="Fotos_Portafolio/IMG-hogar-WA0003.jpg" class="card-img-top" alt="..." height="300">
+            </div>
         </div>
         <div class="col">
             <div class="card">
-              <img src="Fotos_Portafolio/IMG-hogar-WA0018.jpg" class="card-img-top" alt="..." height="300">
+                <img src="Fotos_Portafolio/IMG-hogar-WA0004.jpg" class="card-img-top" alt="..." height="300">
             </div>
-          </div>
-          <div class="col">
+        </div>
+        <div class="col">
             <div class="card">
-              <img src="Fotos_Portafolio/IMG-hogar-WA0019.jpg" class="card-img-top" alt="..." height="300">
+                <img src="Fotos_Portafolio/IMG-hogar-WA0007.jpg" class="card-img-top" alt="..." height="300">
             </div>
-          </div>
-          <div class="col">
+        </div>
+        <div class="col">
             <div class="card">
-              <img src="Fotos_Portafolio/IMG-hogar-WA0020.jpg" class="card-img-top" alt="..." height="300">
+                <img src="Fotos_Portafolio/IMG-hogar-WA0016.jpg" class="card-img-top" alt="..." height="300">
             </div>
-          </div>
-          <div class="col">
+        </div>
+        <div class="col">
             <div class="card">
-              <img src="Fotos_Portafolio/IMG-20210711-WA0009.jpg" class="card-img-top" alt="..." height="300">
+                <img src="Fotos_Portafolio/IMG-hogar-WA0018.jpg" class="card-img-top" alt="..." height="300">
             </div>
-          </div>
-          <div class="col">
+        </div>
+        <div class="col">
             <div class="card">
-              <img src="Fotos_Portafolio/WA0013.jpg" class="card-img-top" alt="..." height="300">
+                <img src="Fotos_Portafolio/IMG-hogar-WA0019.jpg" class="card-img-top" alt="..." height="300">
             </div>
-          </div>
-          <div class="col">
+        </div>
+        <div class="col">
             <div class="card">
-              <img src="Fotos_Portafolio/WA0017.jpg" class="card-img-top" alt="..." height="300">
+                <img src="Fotos_Portafolio/IMG-hogar-WA0020.jpg" class="card-img-top" alt="..." height="300">
             </div>
-          </div>
-          <div class="col">
+        </div>
+        <div class="col">
             <div class="card">
-              <img src="Fotos_Portafolio/IMG-20210618-WA0014.jpg" class="card-img-top" alt="..." height="300">
+                <img src="Fotos_Portafolio/IMG-20210711-WA0009.jpg" class="card-img-top" alt="..." height="300">
             </div>
-          </div>
-          <div class="col">
+        </div>
+        <div class="col">
             <div class="card">
-              <img src="Fotos_Portafolio/IMG-PDTO-0016.jpg" class="card-img-top" alt="..." height="300">
+                <img src="Fotos_Portafolio/WA0013.jpg" class="card-img-top" alt="..." height="300">
             </div>
-          </div>
-      </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="Fotos_Portafolio/WA0017.jpg" class="card-img-top" alt="..." height="300">
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="Fotos_Portafolio/IMG-20210618-WA0014.jpg" class="card-img-top" alt="..." height="300">
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="Fotos_Portafolio/IMG-PDTO-0016.jpg" class="card-img-top" alt="..." height="300">
+            </div>
+        </div>
+    </div>
+    <div id="paginasGaleria">
+        <a class="btn btn-dark" href="#" role="button">Link</a>
+        <a class="btn btn-dark" href="#" role="button">Link</a>
+    </div>
 
     <footer class="bg-dark text-center text-white">
         <!-- Grid container -->
