--- a/galeria2.html
+++ b/galeria2.html
@@ -39,7 +39,7 @@
     </nav>
 
     <div class="text-center p-3" style="background-color: rgba(253, 253, 253, 0.6);">
-        <h3>LÍNEA HOGAR</h3>
+        <h3>LÍNEA EXTERIORES</h3>
     </div>
 
     <div class="row row-cols-1 row-cols-md-3 g-4">
