Se insertaron imagenes pagna 2 galeria

--- a/galeria2.html
+++ b/galeria2.html
@@ -55,32 +55,7 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="Fotos_Portafolio/IMG-20210711-WA0015.jpg" class="card-img-top" alt="..." height="300">
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img src="Fotos_Portafolio/IMG-hogar-WA0016.jpg" class="card-img-top" alt="..." height="300">
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img src="Fotos_Portafolio/IMG-hogar-WA0018.jpg" class="card-img-top" alt="..." height="300">
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img src="Fotos_Portafolio/IMG-hogar-WA0019.jpg" class="card-img-top" alt="..." height="300">
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img src="Fotos_Portafolio/IMG-hogar-WA0020.jpg" class="card-img-top" alt="..." height="300">
-            </div>
-        </div>
-        <div class="col">
-            <div class="card">
-                <img src="Fotos_Portafolio/IMG-20210711-WA0009.jpg" class="card-img-top" alt="..." height="300">
+                <img src="Fotos_Portafolio/IMG-20210618-WA0015.jpg" class="card-img-top" alt="..." height="300">
             </div>
         </div>
         <div class="col">
@@ -90,17 +65,27 @@
         </div>
         <div class="col">
             <div class="card">
-                <img src="Fotos_Portafolio/WA0017.jpg" class="card-img-top" alt="..." height="300">
+                <img src="Fotos_Portafolio/0007.png" class="card-img-top" alt="..." height="300">
             </div>
         </div>
         <div class="col">
             <div class="card">
-                <img src="Fotos_Portafolio/IMG-20210618-WA0014.jpg" class="card-img-top" alt="..." height="300">
+                <img src="Fotos_Portafolio/IMG-20210618-WA0005.jpg" class="card-img-top" alt="..." height="300">
             </div>
         </div>
         <div class="col">
             <div class="card">
-                <img src="Fotos_Portafolio/IMG-PDTO-0016.jpg" class="card-img-top" alt="..." height="300">
+                <img src="Fotos_Portafolio/IMG-20210618-WA0008.jpg" class="card-img-top" alt="..." height="300">
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="Fotos_Portafolio/IMG-20210618-WA0010.jpg" class="card-img-top" alt="..." height="300">
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="Fotos_Portafolio/IMG-hogar-WA0004.jpg" class="card-img-top" alt="..." height="300">
             </div>
         </div>
     </div>
