Se ajutaron botenes paginas 1 y 2 galeria

--- a/galeria2.html
+++ b/galeria2.html
@@ -90,6 +90,7 @@
         </div>
     </div>
     <div id="paginasGaleria">
+        <a class="btn btn-dark" href="#" role="button">1</a>
         <a class="btn btn-dark" href="#" role="button">2</a>
         <a class="btn btn-dark" href="#" role="button">3</a>
     </div>
