--- a/galeria.html
+++ b/galeria.html
@@ -105,6 +105,7 @@
         </div>
     </div>
     <div id="paginasGaleria">
+        <a class="btn btn-dark" href="#" role="button">1</a>
         <a class="btn btn-dark" href="#" role="button">2</a>
         <a class="btn btn-dark" href="#" role="button">3</a>
     </div>
