Se insertaron fotos pagina 3, galeria

--- a/galeria3.html
+++ b/galeria3.html
@@ -45,19 +45,35 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
         <div class="col">
             <div class="card">
-                <img src="Fotos_Portafolio/IMG-EXT-WA0005.jpg" class="card-img-top" alt="..." height="300">
+                <img src="Fotos_Portafolio/IMG-VERDE-WA0014.jpg" class="card-img-top" alt="..." height="300">
             </div>
         </div>
         <div class="col">
             <div class="card">
-                <img src="Fotos_Portafolio/IMG-EXT-WA0006.jpg" class="card-img-top" alt="..." height="300">
+                <img src="Fotos_Portafolio/IMG-VERDE-WA0015.jpg" class="card-img-top" alt="..." height="300">
             </div>
         </div>
         <div class="col">
             <div class="card">
-                <img src="Fotos_Portafolio/IMG-20210618-WA0015.jpg" class="card-img-top" alt="..." height="300">
+                <img src="Fotos_Portafolio/WA0011.jpg" class="card-img-top" alt="..." height="300">
             </div>
         </div>
+        <div class="col">
+            <div class="card">
+                <img src="Fotos_Portafolio/IMG-20210618-WA0012.jpg" class="card-img-top" alt="..." height="300">
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="Fotos_Portafolio/IMG-PDTO-0010.jpg" class="card-img-top" alt="..." height="300">
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+                <img src="Fotos_Portafolio/IMG-20210618-WA0014.jpg" class="card-img-top" alt="..." height="300">
+            </div>
+        </div>
+
     </div>
     <div id="paginasGaleria">
         <a class="btn btn-dark" href="#" role="button">1</a>
