Se agregó texto en card-text

--- a/nosotros.html
+++ b/nosotros.html
@@ -47,9 +47,23 @@
         <img src="Fondos/fondo-madera-morado.jpg" class="card-img-top" alt="..."  height="400px">
         <div class="card-body">
           <h5 class="card-title">¿Quiénes somos?</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in 
-              to additional content. This content is a little bit longer.</p>
-          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          <p class="card-text">Somos una familia emprendedora del sector de la madera.
+                                Nos definimos como artesanos. Para nosotros la madera es
+                                algo vivo, un don de la naturaleza, con el que se puede
+                                hacer realidad los sueños de quienes acuden con sus ideas.
+                                Nos gusta diseñar, crear piezas y espacios en madera. Buscamos
+                                ir mas allá, haciendo cosas diferentes,innovadoras combinadas con 
+                                lo clásico y tradicional.
+          </p>
+
+          <p class="card-text">Somos una empresa familiar dedicada al sector de la madera en búsqueda 
+              de una constante evolución y de adaptación a las nuevas tendencias. Nuestra eficacia y experiencia
+              se caracteriza por ofrecer un servicio personalizado a cada un de nuestros clientes, los
+              cuales seran partícipes del diseño y construcción del producto, siendo asesorados por nuestro equipo
+              de colaboradores.
+          </p>
+
+          <p class="card-text"><small class="text-muted">Somos una empresa respetuosa con el medio ambiente</small></p>
         </div>
       </div>
 
