Se insertó imagen en seccion nosotros

--- a/nosotros.html
+++ b/nosotros.html
@@ -44,7 +44,7 @@
     </div>
 
     <div class="card mb-3">
-        <img src="Fondos/fondo-madera-morado.jpg" class="card-img-top" alt="..."  height="400px">
+        <img src="Fondos/F1Nosotros.jpg" class="card-img-top" alt="..."  height="400px">
         <div class="card-body">
           <h5 class="card-title">¿Quiénes somos?</h5>
           <p class="card-text">Somos una familia emprendedora del sector de la madera.
