Se hizo enlaces y ajuste color en nav

--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <link rel="stylesheet" media="screen" href="nosotros.css">
+    <link rel="stylesheet" media="screen" href="contacto.css">
     <title>Hermanos Martinez</title>
 </head>
 
@@ -30,10 +30,10 @@
                 <p class="cabezote">Galería</p>
             </a>
             <a class="navbar-brand" href="#">
-                <p class="cabezoteTres">Nosotros</p>
+                <p class="cabezote">Nosotros</p>
             </a>
             <a class="navbar-brand" href="#">
-                <p class="cabezote">Contacto</p>
+                <p class="cabezoteCuatro">Contacto</p>
             </a>
         </div>
     </nav>
