Se inserto iconos contacto y texto

--- a/contacto.html
+++ b/contacto.html
@@ -39,33 +39,34 @@
     </nav>
 
     <div class="text-center p-3" style="background-color: rgba(253, 253, 253, 0.6);">
-        <h3>HERMANOS MARTINEZ</h3>
-        <h4>Carpintería/Ebanistería</h4>
+        <h3>CONTÁCTANOS</h3>
     </div>
 
-    <div class="card mb-3">
-        <img src="Fondos/F1Nosotros.jpg" class="card-img-top" alt="..."  height="400px">
-        <div class="card-body">
-          <h5 class="card-title">¿Quiénes somos?</h5>
-          <p class="card-text">Somos una familia emprendedora del sector de la madera.
-                                Nos definimos como artesanos. Para nosotros la madera es
-                                algo vivo, un don de la naturaleza, con el que se puede
-                                hacer realidad los sueños de quienes acuden con sus ideas.
-                                Nos gusta diseñar, crear piezas y espacios en madera. Buscamos
-                                ir mas allá, haciendo cosas diferentes,innovadoras combinadas con 
-                                lo clásico y tradicional.
-          </p>
-
-          <p class="card-text">Somos una empresa familiar dedicada al sector de la madera en búsqueda 
-              de una constante evolución y de adaptación a las nuevas tendencias. Nuestra eficacia y experiencia
-              se caracteriza por ofrecer un servicio personalizado a cada un de nuestros clientes, los
-              cuales seran partícipes del diseño y construcción del producto, siendo asesorados por nuestro equipo
-              de colaboradores.
-          </p>
-
-          <p class="card-text"><small class="text-muted">Somos una empresa respetuosa con el medio ambiente</small></p>
+    <div class="card-group">
+        <div class="card"><br><br>
+          <img src="Fondos/phone-call-icon.svg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Teléfono/Whatsapp</h5>
+            <p class="card-text">+57 300 6560820</p>
+          </div>
+        </div>
+        <div class="card"><br><br>
+          <img src="Fondos/images.sgv" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Dirección</h5>
+            <p class="card-text">22 Acacia Avenue.</p>
+            <p class="card-text"><small class="text-muted">Santa Marta, Colombia</small></p>
+          </div>
+        </div>
+        <div class="card"><br><br>
+          <img src="Fondos/icon-footer-mail.svg" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">Correo Electrónico</h5>
+            <p class="card-text">rmar6721@hotmail.com.</p>
+          </div>
         </div>
       </div>
+
 
 
     <footer class="bg-dark text-center text-white">
