Se terminó de ajustar enlaces

--- a/portafolio.html
+++ b/portafolio.html
@@ -26,13 +26,13 @@
             <a class="navbar-brand" href="#">
                 <p class="cabezoteUno">Portafolio</p>
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="galeria.html">
                 <p class="cabezote">Galería</p>
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="nosotros.html">
                 <p class="cabezote">Nosotros</p>
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="contacto.html">
                 <p class="cabezote">Contacto</p>
             </a>
         </div>
